# ip-monitor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  COMMIT_GUIDE.md  GIT-SETUP.md  LICENSE  README.md  config.example.yaml  pyproject.toml  renovate.json
.github/workflows/: automerge.yml  ci.yml  codeql.yml  pr-title-lint.yml  pre-commit.yml
contrib/systemd/: ip-monitor.service  ip-monitor.timer
src/ip_monitor/: __init__.py  config.py  monitoring.py  notify.py
tests/: conftest.py  test_check_ip_exceptions.py  test_check_url_exceptions.py  test_config.py  test_config_db_path_validators.py  test_env_invalid_vars.py  test_env_overrides.py  test_main.py  test_main_errors.py  test_main_interrupt_close.py  test_main_notifications.py  test_main_precheck_progress.py  test_main_task_errors.py  test_monitoring_checks.py  test_monitoring_db.py  test_notify.py  test_notify_exceptions.py  test_platformdirs_paths.py  test_precheck_internet.py  test_progress_output.py  test_resolve_params.py
